migration-result/docs/ver/16.x/database-access/guides/postgres-redshift.mdx
---
title: Database Access with Redshift on AWS
description: How to configure Teleport database access with AWS Redshift PostgreSQL.
videoBanner: UFhT52d5bYg
version: "16.x"
---

Teleport can provide secure access to AWS Redshift via the  [Teleport Database
Service](/docs/ver/16.x/database-access/introduction). This allows for
fine-grained access control through [Teleport's RBAC](/docs/ver/16.x/database-access/rbac).

In this guide, you will:

1. Configure an AWS Redshift database with IAM authentication.
2. Join the AWS Redshift database to your Teleport cluster.
3. Connect to the AWS Redshift database via the Teleport Database Service.

<Tabs>
  <Tab title="Self-Hosted">
        <img src="/assets/redshift_selfhosted-979462d1b5.png" alt="Teleport Database Access Redshift Self-Hosted" width="1412" height="571" />
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
        <img src="/assets/redshift_cloud-19c9166116.png" alt="Teleport Database Access Redshift Cloud" width="1412" height="571" />
  </Tab>
</Tabs>

## Prerequisites

<Tabs>
  <Tab title="Teleport Community Edition">
    - A running Teleport cluster. For details on how to set this up, see the
      [Getting Started](/docs/ver/16.x) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 16.0.0-dev.

      See [Installation](/docs/ver/16.x/installation) for details.

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport v16.0.0-dev git:api/14.0.0-gd1e081e go1.22
      
    $ tsh version
    # Teleport v16.0.0-dev go1.22
    Proxy version: 16.0.0-dev
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Team">
    - A Teleport Team account. If you don't have an account, sign
      up to begin your [free trial](https://goteleport.com/signup/).

    - The Enterprise `tctl` admin tool and `tsh` client tool, version >= 14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/16.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport Enterprise v14.3.6 git:api/14.0.0-gd1e081e go1.22
      
    $ tsh version
    # Teleport v14.3.6 go1.22
    Proxy version: 14.3.6
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see the Enterprise
      [Getting Started](/docs/ver/16.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      16.0.0-dev.

      You can download these tools by visiting your [Teleport
      account workspace](https://teleport.sh).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport Enterprise v16.0.0-dev git:api/14.0.0-gd1e081e go1.22
      
    $ tsh version
    # Teleport v16.0.0-dev go1.22
    Proxy version: 16.0.0-dev
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you don't have an account,
      sign up to begin a [free trial](https://goteleport.com/signup/)  of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/16.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport Enterprise v14.3.6 git:api/14.0.0-gd1e081e go1.22
      
    $ tsh version
    # Teleport v14.3.6 go1.22
    Proxy version: 14.3.6
    Proxy: teleport.example.com
    ```
  </Tab>
</Tabs>

- AWS account with a Redshift cluster and permissions to create and attach IAM
  policies.
- Command-line client `psql` installed and added to your system's `PATH` environment variable.
- A host, e.g., an EC2 instance, where you will run the Teleport Database
  Service.
- A running Teleport Discovery Service if you plan to use [Database
  Auto-Discovery](/docs/ver/16.x/database-access/guides/aws-discovery).
- To check that you can connect to your Teleport cluster, sign in with `tsh login`, then
  verify that you can run `tctl` commands using your current credentials.
  `tctl` is supported on macOS and Linux machines.

  For example:
  ```bash
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  16.0.0-dev
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  If you can connect to the cluster and run the `tctl status` command, you can use your
  current credentials to run subsequent `tctl` commands from your workstation.
  If you host your own Teleport cluster, you can also run `tctl` commands on the computer that
  hosts the Teleport Auth Service for full permissions.

## Step 1/6. Create a Teleport user

<Tip>
  To modify an existing user to provide access to the Database Service, see [Database Access Access Controls](/docs/ver/16.x/database-access/rbac)
</Tip>

<Tabs>
  <Tab title="Teleport Team/Community Edition">
    Create a local Teleport user with the built-in `access` role:

    ```bash
    $ tctl users add \
      --roles=access \
      --db-users=\* \
      --db-names=\* \
      alice
    ```
  </Tab>

  <Tab title="Teleport Enterprise/Enterprise Cloud">
    Create a local Teleport user with the built-in `access` and `requester` roles:

    ```bash
    $ tctl users add \
      --roles=access,requester \
      --db-users=\* \
      --db-names=\* \
      alice
    ```
  </Tab>
</Tabs>

| Flag         | Description                                                                                                                              |
| ------------ | ---------------------------------------------------------------------------------------------------------------------------------------- |
| `--roles`    | List of roles to assign to the user. The builtin `access` role allows them to connect to any database server registered with Teleport.   |
| `--db-users` | List of database usernames the user will be allowed to use when connecting to the databases. A wildcard allows any user.                 |
| `--db-names` | List of logical databases (aka schemas) the user will be allowed to connect to within a database server. A wildcard allows any database. |

<Warning>
  Database names are only enforced for PostgreSQL and MongoDB databases.
</Warning>

For more detailed information about database access controls and how to restrict
access see [RBAC](/docs/ver/16.x/database-access/rbac) documentation.

## Step 2/6. Create a Database Service configuration

The Database Service requires a valid auth token to connect to the cluster. Generate
one by running the following command against your Teleport Auth Service and save
it in `/tmp/token` on the node that will run the Database Service:

```bash
$ tctl tokens add --type=db
```

<Accordion title="Alternative methods">
  For users with a lot of infrastructure in AWS, or who might create or recreate
  many instances, consider alternative methods for joining new EC2 instances running
  Teleport:

  - [Configure Teleport to Automatically Enroll EC2 instances](/docs/ver/16.x/server-access/guides/ec2-discovery)
  - [Joining Teleport Services via AWS IAM
    Role](/docs/ver/16.x/agents/join-services-to-your-cluster/aws-iam)
  - [Joining Teleport Services via AWS EC2 Identity Document](/docs/ver/16.x/agents/join-services-to-your-cluster/aws-ec2)
</Accordion>

Install Teleport on the host where you will run the Teleport Database Service:

Select an edition, then follow the instructions for that edition to install Teleport.

<Tabs dropdownView dropdownCaption="Teleport Edition">
  <Tab title="Teleport Community Edition">
    The following command updates the repository for the package manager on the
    local operating system and installs the provided Teleport version:

    ```bash
    $ curl https://goteleport.com/static/install.sh | bash -s 16.0.0-dev
    ```
  </Tab>

  <Tab title="Teleport Team">
    <Tabs>
      <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
        Add the Teleport repository to your repository list:

        ```bash
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport APT repository for cloud.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Update the repo and install Teleport and the Teleport updater
        $ sudo apt-get update
        $ sudo apt-get install "teleport-ent=$TELEPORT_VERSION" teleport-ent-updater
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7/CentOS 7 (yum)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum install -y yum-utils
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo yum install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo dnf install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport Zypper repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use Zypper to add the teleport RPM repo
        $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo zypper install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater
        ```
      </Tab>
    </Tabs>

    ### OS repository channels

    The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
    `stable/v16` anywhere in the Teleport documentation.

    | Channel name     | Description                                                                  |
    | ---------------- | ---------------------------------------------------------------------------- |
    | `stable/<major>` | Receives releases for the specified major release line, i.e. `v16`           |
    | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
    | `stable/rolling` | Rolling channel that receives all published Teleport releases                |

    <Accordion title="Is my Teleport instance compatible with Teleport Team?">
      Before installing a `teleport` binary with a version besides
      v14, read our compatibility rules to ensure that the
      binary is compatible with Teleport Cloud.

      Teleport uses [Semantic Versioning](https://semver.org/). Version numbers
      include a major version, minor version, and patch version, separated by dots.
      When running multiple `teleport` binaries within a cluster, the following rules
      apply:

      - **Patch and minor** versions are always compatible, for example, any 8.0.1
        component will work with any 8.0.3 component and any 8.1.0 component will work
        with any 8.3.0 component.
      - Servers support clients that are one major version behind, but do not support
        clients that are on a newer major version. For example, an 8.x.x Proxy Service
        instance is compatible with 7.x.x agents and 7.x.x `tsh`, but we don't
        guarantee that a 9.x.x agent will work with an 8.x.x Proxy Service instance.
        This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
        You must upgrade to 7.x.x first.
      - Proxy Service instances and agents do not support Auth Service instances that
        are on an older major version, and will fail to connect to older Auth Service
        instances by default. You can override version checks by passing
        `--skip-version-check` when starting agents and Proxy Service instances.
    </Accordion>
  </Tab>

  <Tab title="Teleport Enterprise">
    <Tabs>
      <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
        ```bash
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport APT repository for v16. You'll need to update this
        # file for each major release of Teleport.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/v16" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        $ sudo apt-get update
        $ sudo apt-get install teleport-ent
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```bash
        $ sudo apt-get install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7 (yum)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for v16. You'll need to update this
        # file for each major release of Teleport.
        # First, get the major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum install -y yum-utils
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v16/teleport.repo")"
        $ sudo yum install teleport-ent
        #
        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```bash
        $ sudo yum install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7 (zypper)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport Zypper repository for v16. You'll need to update this
        # file for each major release of Teleport.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use zypper to add the teleport RPM repo
        $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")
        $ sudo yum install teleport-ent
        #
        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```bash
        $ sudo yum install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for v16. You'll need to update this
        # file for each major release of Teleport.
        # First, get the major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v16/teleport.repo")"

        # Install teleport
        $ sudo dnf install teleport-ent

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```bash
        $ sudo dnf install teleport-ent-fips
        ```
      </Tab>

      <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport Zypper repository.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use Zypper to add the teleport RPM repo
        $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v16/teleport-zypper.repo")

        # Install teleport
        $ sudo zypper install teleport-ent
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```bash
        $ sudo zypper install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Tarball">
        In the example commands below, update `$SYSTEM_ARCH` with the appropriate
        value (`amd64`, `arm64`, or `arm`). All example commands using this variable
        will update after one is filled out.

        ```bash
        $ curl https://cdn.teleport.dev/teleport-ent-v16.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v16.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz
        $ shasum -a 256 teleport-ent-v16.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v16.0.0-dev-linux-$SYSTEM_ARCH-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```

        For FedRAMP/FIPS-compliant installations of Teleport Enterprise, package URLs
        will be slightly different:

        ```bash
        $ curl https://cdn.teleport.dev/teleport-ent-v16.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v16.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        $ shasum -a 256 teleport-ent-v16.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v16.0.0-dev-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```
      </Tab>
    </Tabs>

    ### OS repository channels

    The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
    `stable/v16` anywhere in the Teleport documentation.

    | Channel name     | Description                                                                  |
    | ---------------- | ---------------------------------------------------------------------------- |
    | `stable/<major>` | Receives releases for the specified major release line, i.e. `v16`           |
    | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
    | `stable/rolling` | Rolling channel that receives all published Teleport releases                |
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    <Tabs>
      <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
        Add the Teleport repository to your repository list:

        ```bash
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport APT repository for cloud.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Update the repo and install Teleport and the Teleport updater
        $ sudo apt-get update
        $ sudo apt-get install "teleport-ent=$TELEPORT_VERSION" teleport-ent-updater
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7/CentOS 7 (yum)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum install -y yum-utils
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo yum install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo dnf install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
        ```bash
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport Zypper repository for cloud.
        # First, get the OS major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        # Use Zypper to add the teleport RPM repo
        $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")

        # Provide your Teleport domain to query the latest compatible Teleport version
        $ export TELEPORT_DOMAIN=example.teleport.com
        $ export TELEPORT_VERSION="$(curl https://$TELEPORT_DOMAIN/v1/webapi/automaticupgrades/channel/default/version | sed 's/v//')"

        # Install Teleport and the Teleport updater
        $ sudo zypper install "teleport-ent-$TELEPORT_VERSION" teleport-ent-updater
        ```
      </Tab>
    </Tabs>

    ### OS repository channels

    The following channels are available for APT, YUM, and Zypper repos. They may be used in place of
    `stable/v16` anywhere in the Teleport documentation.

    | Channel name     | Description                                                                  |
    | ---------------- | ---------------------------------------------------------------------------- |
    | `stable/<major>` | Receives releases for the specified major release line, i.e. `v16`           |
    | `stable/cloud`   | Rolling channel that receives releases compatible with current Cloud version |
    | `stable/rolling` | Rolling channel that receives all published Teleport releases                |

    <Accordion title="Is my Teleport instance compatible with Teleport Enterprise Cloud?">
      Before installing a `teleport` binary with a version besides v14,
      read our compatibility rules to ensure that the binary is compatible with
      Teleport Enterprise Cloud.

      Teleport uses [Semantic Versioning](https://semver.org/). Version numbers
      include a major version, minor version, and patch version, separated by dots.
      When running multiple `teleport` binaries within a cluster, the following rules
      apply:

      - **Patch and minor** versions are always compatible, for example, any 8.0.1
        component will work with any 8.0.3 component and any 8.1.0 component will work
        with any 8.3.0 component.
      - Servers support clients that are one major version behind, but do not support
        clients that are on a newer major version. For example, an 8.x.x Proxy Service
        instance is compatible with 7.x.x agents and 7.x.x `tsh`, but we don't
        guarantee that a 9.x.x agent will work with an 8.x.x Proxy Service instance.
        This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
        You must upgrade to 7.x.x first.
      - Proxy Service instances and agents do not support Auth Service instances that
        are on an older major version, and will fail to connect to older Auth Service
        instances by default. You can override version checks by passing
        `--skip-version-check` when starting agents and Proxy Service instances.
    </Accordion>
  </Tab>
</Tabs>

Databases can be registered dynamically by Discovery Service, `tctl`, etc.

Generate a Database Service configuration that monitors the dynamic database
resources:

```bash
$ sudo teleport db configure create \
   -o file \
   --proxy=mytenant.teleport.sh:443 \
   --token=/tmp/token \
   --dynamic-resources-labels env=prod
```

This command will place the Database Service configuration at the
`/etc/teleport.yaml` location.

<Accordion title="Enable auto-discovery for AWS Redshift in Discovery Service?">
  In your Teleport Discovery Service's configuration, use AWS matcher type
  `redshift`, and update `region` and `tags` that match your Redshift
  databases:

  ```yaml
  discovery_service:
    enabled: "yes"
    aws:
    - types: ["redshift"]
      regions: ["us-west-1"]
      tags:
        "env": "prod" # Match database resource tags where tag:env=prod
  ```

  Restart the Discovery Service.
</Accordion>

## Step 3/6. Create an IAM Role for user access (optional)

Redshift supports two methods of IAM authentication, both of which Teleport
also supports.

First is IAM authentication as a database user. In this method, the Teleport
Database Service generates a temporary IAM authentication token for a database
user that already exists in the Redshift database. If you choose to use this
method, you can skip this step as no additional IAM roles are required.

The second method is to authenticate as an IAM role. In this case, the Teleport
Database Service assumes an IAM role to authenticate with Redshift. Redshift
then maps that IAM role to a database username and creates that database user
if it doesn't already exist in the database.

If you choose the second method, create the AWS IAM role to provide user access
to the Redshift database. Go to IAM -> Access Management ->
[Roles](https://console.aws.amazon.com/iamv2/home#/roles), and click "Create Role".

<img src="/assets/create-role-step1-4df9940db0.png" alt="Create Role Step 1" width="1800" height="1402" />

Skip "Add permissions" for now, enter a role name, and press "Create role".

Once the role is created, find the role, and add the following inline policy to
the IAM role:
<img src="/assets/create-redshift-iam-role-policy-72e497f37b.png" alt="Create Role Step 1" width="1200" height="769" />

Or in JSON format:

```json
{
	"Version": "2012-10-17",
	"Statement": [
		{
			"Effect": "Allow",
			"Action": "redshift:GetClusterCredentialsWithIAM",
			"Resource": "arn:aws:redshift:us-east-1:123456789012:dbname:my-redshift/*"
		}
	]
}
```

Replace `123456789012` and `my-redshift` with your AWS account ID and your
Redshift database's cluster ID.

## Step 4/6. Create an IAM policy for the Database Service

Teleport needs AWS IAM permissions to be able to:

- Manage IAM user or IAM role policies, for IAM authentication as database users.
- Assume IAM roles, for IAM authentication as IAM roles.

Before you can generate IAM permissions, you must provide the Teleport Database
Service access to AWS credentials.

Grant the Database Service access to credentials that it can use to authenticate to
AWS. If you are running the Database Service on an EC2 instance, you should use the EC2
Instance Metadata Service method. Otherwise, you must use environment variables:

<Tabs>
  <Tab title="Instance Metadata Service">
    Teleport will detect when it is running on an EC2 instance and use the Instance
    Metadata Service to fetch credentials.

    The EC2 instance should be configured to use an EC2 instance profile. For more
    information, see: [Using Instance Profiles](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use_switch-role-ec2_instance-profiles.html).
  </Tab>

  <Tab title="Environment Variables">
    Teleport's built-in AWS client reads credentials from the following environment
    variables:

    - `AWS_ACCESS_KEY_ID`
    - `AWS_SECRET_ACCESS_KEY`
    - `AWS_DEFAULT_REGION`

    When you start the Database Service, the service reads environment variables from a
    file at the path `/etc/default/teleport`. Obtain these credentials from your
    organization. Ensure that `/etc/default/teleport` has the following content,
    replacing the values of each variable:

    ```text
    AWS_ACCESS_KEY_ID=00000000000000000000
    AWS_SECRET_ACCESS_KEY=0000000000000000000000000000000000000000
    AWS_DEFAULT_REGION=<YOUR_REGION>
    ```
  </Tab>
</Tabs>

<Accordion title="Have multiple sources of AWS credentials?">
  Teleport's AWS client loads credentials from different sources in the following
  order:

  - Environment Variables
  - Shared credentials file
  - Shared configuration file (Teleport always enables shared configuration)
  - EC2 Instance Metadata (credentials only)

  While you can provide AWS credentials via a shared credentials file or shared
  configuration file, you will need to run the Database Service with the `AWS_PROFILE`
  environment variable assigned to the name of your profile of choice.

  If you have a specific use case that the instructions above do not account for,
  consult the documentation for the [AWS SDK for
  Go](https://docs.aws.amazon.com/sdk-for-go/api/aws/session/) for a detailed
  description of credential loading behavior.
</Accordion>

Teleport can bootstrap IAM permissions for the Database Service based on its
configuration:

<Tabs>
  <Tab title="Auto-discovery">
    Teleport can bootstrap IAM permissions for the Database Service based on
    Discovery Service's configuration while bootstrapping the Discovery Service
    using the `teleport discovery bootstrap` command. You can use this command in
    automatic or manual mode:

    - In automatic mode, Teleport will attempt to create appropriate IAM policies
      and attach them to the specified IAM role. This requires IAM permissions to
      create and attach IAM policies.
    - In manual mode, Teleport will print required IAM policies. You can then create
      and attach them manually using the AWS management console. Add `--manual`
      flag to the command to enable manual mode.

    ```bash
    $ teleport discovery bootstrap \
      --attach-to-role arn:aws:iam::aws-account-id:role/discovery-iam-role-name \
      --policy-name TeleportDatabaseDiscovery \
      --database-service-role arn:aws:iam::aws-account-id:role/database-iam-role-name \
      --database-service-policy-name TeleportDatabaseAccess \
      -c path to Discovery's teleport.yaml
    ```
  </Tab>

  <Tab title="Static config">
    Teleport can bootstrap IAM permissions for the Database Service based on its
    configuration using the `teleport db configure bootstrap` command. You can use
    this command in automatic or manual mode:

    - In automatic mode, Teleport will attempt to create appropriate IAM policies
      and attach them to the specified IAM identity (user or role). This requires
      IAM permissions to create and attach IAM policies.
    - In manual mode, Teleport will print required IAM policies. You can then create
      and attach them manually using the AWS management console.

    <Tabs>
      <Tab title="Automatic / IAM User">
        Use this command to bootstrap the permissions automatically when
        your Teleport Database Service runs as an IAM user (for example, uses an AWS
        credentials file).

        ```bash
        $ teleport db configure bootstrap -c /etc/teleport.yaml --attach-to-user TeleportUser
        ```
      </Tab>

      <Tab title="Automatic / IAM Role">
        Use this command to bootstrap the permissions automatically when
        your Teleport Database Service runs as an IAM role (for example, on an EC2
        instance with an attached IAM role).

        ```bash
        $ teleport db configure bootstrap -c /etc/teleport.yaml --attach-to-role TeleportRole
        ```
      </Tab>

      <Tab title="Manual / IAM User">
        Use this command to display required IAM policies which you will then create in your AWS console:

        ```bash
        $ teleport db configure bootstrap -c /etc/teleport.yaml --manual --attach-to-user arn:aws:iam::123456789012:user/TeleportUser
        ```
      </Tab>

      <Tab title="Manual / IAM Role">
        Use this command to display required IAM policies which you will then create in your AWS console:

        ```bash
        $ teleport db configure bootstrap -c /etc/teleport.yaml --manual --attach-to-role arn:aws:iam::123456789012:role/TeleportRole
        ```
      </Tab>
    </Tabs>

    <Accordion title="Bootstrapping with assume_role_arn in config">
      When `assume_role_arn` is configured for databases or AWS matchers,
      `teleport db configure bootstrap` will determine permissions required for the
      bootstrap target AWS IAM identity using the following logic:

      - When the target does not match `assume_role_arn` in any database resource or
        AWS matcher in the configuration file, the target is assumed to be the
        Teleport Database Service's AWS IAM identity and permissions are bootstrapped
        for all the configured static databases and AWS matchers.
      - When an `--attach-to-role` target matches an `assume_role_arn` setting for
        static databases or AWS matchers in the configuration file, permissions will
        be bootstrapped only for those static databases or AWS matchers.

      You will need to run the bootstrap command once with the Teleport Database
      Service's IAM identity as the policy attachment target, and once for each AWS
      IAM role that is used for `assume_role_arn`.
    </Accordion>
  </Tab>
</Tabs>

Alternatively, you can create or print the required IAM policies with the
following commands and manually attach them to the IAM role:

- `teleport db configure aws create-iam --types redshift`
- `teleport db configure aws print-iam --types redshift`

## Step 5/6. Start the Database Service

Configure the Database Service to start automatically when the host boots up by
creating a systemd service for it. The instructions depend on how you installed
the Database Service.

<Tabs>
  <Tab title="Package Manager">
    On the host where you will run the Database Service, enable and start Teleport:

    ```bash
    $ sudo systemctl enable teleport
    $ sudo systemctl start teleport
    ```
  </Tab>

  <Tab title="TAR Archive">
    On the host where you will run the Database Service, create a systemd service
    configuration for Teleport, enable the Teleport service, and start Teleport:

    ```bash
    $ sudo teleport install systemd -o /etc/systemd/system/teleport.service
    $ sudo systemctl enable teleport
    $ sudo systemctl start teleport
    ```
  </Tab>
</Tabs>

You can check the status of the Database Service with `systemctl status teleport`
and view its logs with `journalctl -fu teleport`.

The Database Service will also attempt to configure IAM access policies for the
registered databases. Keep in mind that AWS IAM changes may not propagate
immediately and can take a few minutes to come into effect.

## Step 6/6. Connect

<Tabs>
  <Tab title="Self-Hosted">
    Once the Database Service has started and joined the cluster, log in to see the
    registered databases. Replace `--proxy` with the address of your Teleport Proxy
    Service.

    ```bash
    $ tsh login --proxy=teleport.example.com --user=alice
    $ tsh db ls
    # Name        Description                    Labels
    # ----------- ------------------------------ --------
    # my-redshift Redshift cluster in us-east-1  ...
    ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    Once the Database Service has started and joined the cluster, log in to see the
    registered databases. Replace `--proxy` with the address of your Teleport Cloud
    tenant.

    ```bash
    $ tsh login --proxy=mytenant.teleport.sh --user=alice
    $ tsh db ls
    # Name        Description                    Labels
    # ----------- ------------------------------ --------
    # my-redshift Redshift cluster in us-east-1  ...
    ```
  </Tab>
</Tabs>

To retrieve credentials for a database and connect to it:

<Tabs>
  <Tab title="Authenticate as database users">
    ```bash
    $ tsh db connect --db-user=alice --db-name=dev my-redshift
    ```

    <Note>
      <p>
        **Database users must exist**
      </p>

      Teleport does not currently use the auto-create option when generating
      tokens for Redshift databases. Users must exist in the database.
    </Note>
  </Tab>

  <Tab title="Authenticate as IAM roles">
    ```bash
    $ tsh db connect --db-user=role/my-iam-role --db-name=dev my-redshift
    ```
  </Tab>
</Tabs>

To log out of the database and remove credentials:

```bash
$ tsh db logout my-redshift
```

## Troubleshooting

### Certificate error

If your `tsh db connect` error includes the following text, you likely have an RDS database created before July 28, 2020, which presents an X.509 certificate that is incompatible with Teleport:

```text
x509: certificate relies on legacy Common Name field, use SANs instead
```

AWS provides instructions to rotate your [SSL/TLS certificate](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.SSL-certificate-rotation.html).

### No credential providers error

If you see the error `NoCredentialProviders: no valid providers in chain` in Database Service logs then Teleport
is not detecting the required credentials to connect via AWS IAM permissions. Check whether
the credentials or security role has been applied in the machine running the Teleport Database Service.

### Timeout errors

The Teleport Database Service needs connectivity to your database endpoints. That may require
enabling inbound traffic on the database from the Database Service on the same VPC or routing rules from another VPC. Using the `nc`
program you can verify connections to databases:

```bash
$ nc -zv postgres-instance-1.sadas.us-east-1.rds.amazonaws.com 5432
# Connection to postgres-instance-1.sadas.us-east-1.rds.amazonaws.com (172.31.24.172) 5432 port [tcp/postgresql] succeeded!
```

### Not authorized to perform `sts:AssumeRole`

The Database Service assumes an IAM role in one of following situations:

- An IAM role is used as `db_user` when accessing AWS services that require IAM
  roles as database users, such as DynamoDB, Keyspaces, Opensearch, and
  Redshift Serverless.
- The `assume_role_arn` field is specified for the database resources or
  dynamic resource matchers.

<Accordion title="Role chaining">
  When both of the above conditions are true for a database connection, the
  Database Service performs a role chaining by assuming the IAM role specified
  `assume_role_arn` first then using that IAM role to assume the IAM role for
  `db_user`.
</Accordion>

You may encounter the following error if the trust relationship is not
configured properly between the IAM roles:

```text
AccessDenied: User: arn:aws:sts::111111111111:assumed-role/database-service-role/i-* is not authorized to perform: sts:AssumeRole on resource: arn:aws:iam::111111111111:role/database-user-role
```

To allow IAM Role `role1` to assume IAM Role `role2`, the following is
generally required:

<Accordion title="1. Configure Trust Relationships on role2">
  `role1` or its AWS account should be set as `Principal` in `role2`'s trust
  policy.

  <Tabs>
    <TabsItem label="Role as principal">
      ```json
      {
        "Version": "2012-10-17",
        "Statement": [
          {
            "Effect": "Allow",
            "Principal": {
              "AWS": "arn:aws:iam::111111111111:role/role1"
            },
            "Action": "sts:AssumeRole"
          }
        ]
      }
      ```
    </TabsItem>

    <TabsItem label="Account as principal">
      ```json
      {
        "Version": "2012-10-17",
        "Statement": [
          {
            "Effect": "Allow",
            "Principal": {
              "AWS": "arn:aws:iam::111111111111:root"
            },
            "Action": "sts:AssumeRole"
          }
        ]
      }
      ```
    </TabsItem>

    <TabsItem label="Cross-account with external-id">
      ```json
      {
        "Version": "2012-10-17",
        "Statement": [
          {
            "Effect": "Allow",
            "Principal": {
              "AWS": "arn:aws:iam::123456789012:role/role1"
            },
            "Action": "sts:AssumeRole",
            "Condition": {
              "StringEquals": {
                "sts:ExternalId": "example-external-id"
              }
            }
          }
        ]
      }
      ```
    </TabsItem>
  </Tabs>
</Accordion>

<Accordion title="2. Configure Permissions Policies on role1">
  `role1` requires `sts:AssumeRole` permissions, for example:

  ```json
  {
      "Version": "2012-10-17",
      "Statement": [
          {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": "arn:aws:iam::111111111111:role/role2"
          }
      ]
  }
  ```

  Note that this policy can be omitted when `role1` and `role2` are in the same
  AWS account and `role1`'s full ARN is configured as Principal in `role2`'s
  trust policy.
</Accordion>

<Accordion title="3. Configure Permissions Boundary on role1">
  `role1` also requires `sts:AssumeRole` permissions in its boundary policy, for
  example:

  ```json
  {
      "Version": "2012-10-17",
      "Statement": [
          {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": "*"
          }
      ]
  }
  ```

  Note that this is only required when a boundary policy is attached to `role1`.
</Accordion>

You can test the trust relationship by running this AWS CLI command as `role1`:

```bash
aws sts assume-role --role-arn arn:aws:iam::111111111111:role/role2 --role-session-name test-trust-relationship
```

Learn more on [how to use trust policies with IAM
roles](https://aws.amazon.com/blogs/security/how-to-use-trust-policies-with-iam-roles/).

### Maximum policy size exceeded errors

Due to [IAM and STS character
limits](https://docs.aws.amazon.com/IAM/latest/UserGuide/reference_iam-quotas.html#reference_iam-quotas-entity-length),
you may encounter one of the following errors in the Database Service logs when
large numbers of databases are registered:

- `LimitExceeded: Maximum policy size of 2048 bytes exceeded for user <iam-user>`
- `LimitExceeded: Maximum policy size of 10240 bytes exceeded for role <iam-role>`

For reference, a user policy can maintain permissions for approximately 6
Redshift databases, or 20 RDS databases due to the IAM policy character limits.
A role policy can maintain permissions for approximately 30 Redshift databases,
or 100 RDS databases.

To get around this limit, try using one or a combination of the following
methods:

<Accordion title="Method 1: Organize IAM roles with &#x22;assume_role_arn&#x22;">
  You can reduce the policy size by separating them into multiple IAM roles. Use
  `assume_role_arn` to specify different IAM roles for accessing the databases:

  <Tabs>
    <Tab title="Auto-Discovery by Discovery Service">
      You can specify `assume_role_arn` in the AWS matchers of Discovery Service's
      configuration:

      ```yaml
      discovery_service:
        enabled: "yes"
        aws:
          - types: ["rds"]
            regions: ["us-west-1", "us-west-2"]
            assume_role_arn: "arn:aws:iam::123456789012:role/example-role-rds-env-prod-discovery"
            tags:
              "env": "prod"

          - types: ["redshift", "redshift-serverless"]
            regions: ["us-west-2"]
            assume_role_arn: "arn:aws:iam::123456789012:role/example-role-redshift-env-dev"
            tags:
              "env": "dev"
      ```

      The Discovery Service will use the IAM roles specified in `assume_role_arn`
      for discovery, and by default the Database Service will use the same IAM
      roles for authentication.

      However, you can also overwrite the IAM roles for authentication by Database
      Service if you wish to use different roles:

      ```yaml
      db_service:
        enabled: "yes"
        resources:
          # Matches us-west-1 env=prod RDS databases from Discovery Service, and
          # overwrites assume_role_arn.
          - labels:
              "env": "prod"
              "region": "us-west-1"
            aws:
              assume_role_arn: "arn:aws:iam::123456789012:role/example-role-rds-env-prod-us-west-1-access"

          # Matches us-west-2 env=prod RDS databases from Discovery Service, and
          # overwrites assume_role_arn.
          - labels:
              "env": "prod"
              "region": "us-west-2"
            aws:
              assume_role_arn: "arn:aws:iam::123456789012:role/example-role-rds-env-prod-us-west-2-access"

          # Matches env=dev Redshift databases from Discovery Service and inherits
          # "arn:aws:iam::123456789012:role/example-role-redshift-env-dev"
          - labels:
              "env": "dev"
      ```

      <Tip>
        <p>
          **Auto-discovery labels**
        </p>

        Teleport generates certain labels derived from the cloud resource attributes
        during discovery. See [Auto-Discovery
        labels](/docs/ver/16.x/database-access/reference/labels#auto-discovery)
        /labels/#auto-discovery)
        for more details.
      </Tip>

      Create or print the required IAM policies with the following commands and
      attach them to the respective IAM roles:

      ```bash
      $ teleport db configure aws create-iam --types redshift,redshift-serverless --name teleport-redshift-access
      $ teleport db configure aws print-iam --types redshift,redshift-serverless
      ```

      Refer to the command usage for a complete list of database types supported by
      the `--types` option.
    </Tab>

    <Tab title="Auto-Discovery by Database Service">
      You can specify `assume_role_arn` in the AWS matchers of Database Service's
      configuration:

      ```yaml
      db_service:
        enabled: "yes"
        aws:
          - types: ["rds"]
            regions: ["us-west-1", "us-west-2"]
            assume_role_arn: "arn:aws:iam::123456789012:role/example-role-rds-env-prod"
            tags:
              "env": "prod"

          - types: ["redshift", "redshift-serverless"]
            regions: ["us-west-2"]
            assume_role_arn: "arn:aws:iam::123456789012:role/example-role-redshift-env-dev"
            tags:
              "env": "dev"
      ```

      The Database Service will use the IAM roles specified `assume_role_arn` for
      both discovery and authentication.

      To bootstrap IAM permissions, run the bootstrap command for each `assume_role_arn`:

      ```bash
      $ teleport db configure bootstrap \
          -c /etc/teleport.yaml \
          --policy-name teleport-policy-rds-env-prod \
          --attach-to-role "arn:aws:iam::123456789012:role/example-role-rds-env-prod"
      ```
    </Tab>

    <Tab title="Static config">
      You can specify `aws.assume_role_arn` when defining databases in Database
      Service's configuration:

      ```yaml
      db_service:
        enabled: "yes"
        databases:
        - name: "rds-postgres"
          protocol: "postgres"
          uri: "rds-postgres.abcdef012345.us-west-1.rds.amazonaws.com:5432"
          aws:
              assume_role_arn: "arn:aws:iam::123456789012:role/example-rds-access-role"
      ```

      To bootstrap IAM permissions, run the bootstrap command for each `assume_role_arn`:

      ```bash
      $ teleport db configure bootstrap \
          -c /etc/teleport.yaml \
          --policy-name teleport-policy-rds-access \
          --attach-to-role "arn:aws:iam::123456789012:role/example-rds-access-role"
      ```
    </Tab>

    <Tab title="Other dynamic resources">
      You can specify `aws.assume_role_arn` when defining databases:

      ```yaml
      kind: db
      version: v3
      metadata:
        name: "rds-postgres"
        labels:
          env: "dev"
      spec:
        protocol: "postgres"
        uri: "rds-postgres.abcdef012345.us-west-1.rds.amazonaws.com:5432"
        aws:
          assume_role_arn: "arn:aws:iam::123456789012:role/example-rds-access-role"
      ```

      Alternatively, you can overwrite the IAM roles for authentication by Database
      Service:

      ```yaml
      db_service:
        enabled: "yes"
        resources:
          # Matches env=dev databases and overwrites assume_role_arn.
          - labels:
              "env": "dev"
            aws:
              assume_role_arn: "arn:aws:iam::123456789012:role/example-env-dev-access"

          # Matches env=prod database, and use the assume_role_arn in the database's
          # definition or use the host IAM identity if assume_role_arn is empty.
          - labels:
              "env": "prod"
      ```

      Create or print the required IAM policies with the following commands and
      attach them to the respective IAM roles:

      ```bash
      $ teleport db configure aws create-iam --types rds --name teleport-rds-access
      $ teleport db configure aws print-iam --types rds
      ```

      Refer to the command usage for a complete list of database types supported by
      the `--types` option.
    </Tab>
  </Tabs>

  The IAM roles specified in `assume_role_arn` must
  [trust](https://aws.amazon.com/blogs/security/how-to-use-trust-policies-with-iam-roles/)
  the IAM identity of the host running the Database Service.

  The `assume_role_arn` is not limited to the same AWS account so you can also
  use this feature for [AWS Cross-Account
  Access](/docs/ver/16.x/database-access/guides/aws-cross-account).
</Accordion>

<Accordion title="Method 2: Manually manage your IAM policies">
  You can manually manage IAM policies for database connections instead of
  relying on the Database Service to update them.

  For example, you can limit the character size by attaching a policy with a
  wildcard "\*" for "Resource":

  <Tabs>
    <Tab title="RDS or RDS Proxy">
      ```json
      {
          "Version": "2012-10-17",
          "Statement": [
              {
                  "Effect": "Allow",
                  "Action": "rds-db:connect",
                  "Resource": "*"
              }
          ]
      }
      ```
    </Tab>

    <Tab title="Redshift">
      ```json
      {
          "Version": "2012-10-17",
          "Statement": [
              {
                  "Effect": "Allow",
                  "Action": "redshift:GetClusterCredentials",
                  "Resource": "*"
              }
          ]
      }
      ```
    </Tab>
  </Tabs>

  You can safely remove the inline policy created by the Database Service and the
  IAM permissions for the Database Service to `Get/Put/Delete` the user or role
  policy.
</Accordion>

<Accordion title="Method 3: Separate Database Services">
  You can deploy [the Database Service in a highly available (HA)
  configuration](/docs/ver/16.x/database-access/guides/ha) where databases can be
  sharded to separate Database Services with different IAM roles.
</Accordion>

<Accordion title="Method 4: Use IAM roles instead of IAM users">
  IAM users have a lower character limit compared to IAM roles. If the limit is
  exceeded for a user policy, it is recommended to use IAM roles for the Database
  Service instead.
</Accordion>

### Unable to cancel a query

If you use a PostgreSQL cli client like `psql`, and you try to cancel a query
with `ctrl+c`, but it doesn't cancel the query, then you need to connect using a
tsh local proxy instead.
When `psql` cancels a query, it establishes a new connection without TLS
certificates, however Teleport requires TLS certificates not only for
authentication, but also to route database connections.

If you
[enable TLS Routing in Teleport](/docs/ver/16.x/management/operations/tls-routing)
then `tsh db connect` will automatically start a local proxy for every
connection.
Alternatively, you can connect via
[Teleport Connect](/docs/ver/16.x/connect-your-client/teleport-connect)
which also uses a local proxy.
Otherwise, you need to start a tsh local proxy manually using `tsh proxy db`
and connect via the local proxy.

If you have already started a long-running query in a `psql` session that you
cannot cancel with ctrl+c, you can start a new client session to cancel that
query manually:

First, find the query's process identifier (PID):

```sql
SELECT pid,starttime,duration,trim(user_name) AS user,trim(query) AS query FROM stv_recents WHERE status = 'Running';
```

Next, gracefully cancel the query using its PID.
This will send a SIGINT signal to the postgres backend process for that query:

```sql
SELECT pg_cancel_backend(<PID>);
```

You should always try to gracefully terminate a query first, but if graceful
cancellation is taking too long, then you can forcefully terminate the query
instead.
This will send a SIGTERM signal to the postgres backend process for that query:

```sql
SELECT pg_terminate_backend(<PID>);
```

See the PostgreSQL documentation on
[admin functions](https://www.postgresql.org/docs/current/functions-admin.html#FUNCTIONS-ADMIN-SIGNAL)
for more information about the `pg_cancel_backend` and `pg_terminate_backend`
functions.

## Next steps

{/* lint ignore list-item-spacing remark-lint */}

- Learn how to [restrict access](/docs/ver/16.x/database-access/rbac) to certain users and databases.

{/* lint ignore list-item-spacing remark-lint */}

- Learn more about [dynamic database registration](/docs/ver/16.x/database-access/guides/dynamic-registration).

{/* lint ignore list-item-spacing remark-lint */}

- View the [High Availability (HA)](/docs/ver/16.x/database-access/guides/ha) guide.

{/* lint ignore list-item-spacing remark-lint */}

- See the YAML configuration [reference](/docs/ver/16.x/database-access/reference/configuration) for updating dynamic resource matchers or static database definitions.

{/* lint ignore list-item-spacing remark-lint */}

- Take a look at the full CLI [reference](/docs/ver/16.x/database-access/reference/cli).

- Learn more about [using IAM authentication to generate database user
  credentials](https://docs.aws.amazon.com/redshift/latest/mgmt/generating-user-credentials.html) for AWS Redshift.
